# template-python-package-poetry

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  devcontainer_build.yaml
package_foobar/: README.md  __init__.py  pyproject.toml  setup.py
package_foobar/package_foobar/: example.py  main.py  test_example.py  test_main.py
package_foobar/src/package_foobar/: main.py
package_foobar/tests/: test_example.py  test_main.py
scripts/: deploy_locally.sh  install.sh  publish_to_pip.sh
