[build-system]
requires = ["poetry==1.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "package_foobar"
version = "0.0.1"
description = "Package foobar description."
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://package.foo.bar"

[tool.poetry]
name = "package_foobar"
version = "0.0.1"
description = "Package foobar description."
readme = "README.md"
authors = ["John Doe <john.doe@foobar.com>"]

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]
pytest="^8.2.2"
pytest-cov="^5.0.0"
pylint="^3.2.6"

[tool.poetry.scripts]

[tool.pylint]
jobs=0
load-plugins="pylint.extensions.docparams"
fail-under=10.0
[tool.pylint.messages_control]

[tool.pylint.format]
max-line-length=120
max-args=10
no-docstring-rgx="(test_.*|Test.*|test.*)"
good-names=""

[tool.pylint.reports]
output-format="colorized"
score="yes"

[tool.pylint.similarities]
ignore-comments="no"
ignore-docstrings="no"
ignore-imports="no"
ignore-signatures="no"
min-similarity-lines=5

[tool.coverage.run]
omit=["*/.local/*","/usr/*",".eggs/*","/opt/*"]

[tool.coverage.report]
exclude_lines=["pragma: no cover"]
fail_under=100

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
